buid: security schema
