# app/Http/Controllers/UserController.php
@@ -4,6 +4,29 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 
+/**
+ * @OA\Schema(
+ *  schema="Register",
+ *  description="Register a new user account.",
+ * 	@OA\Property(
+ * 		property="name",
+ * 		type="string"
+ * 	),
+ * 	@OA\Property(
+ * 		property="email",
+ * 		type="string"
+ * 	),
+ * 	@OA\Property(
+ * 		property="password",
+ * 		type="string"
+ * 	),
+ *  @OA\Property(
+ * 		property="password_confirmation",
+ * 		type="string"
+ * 	),
+ * )
+ */
+
 class UserController extends Controller
 {
     /**
@@ -11,6 +34,7 @@ class UserController extends Controller
      *     path="/api/v1/user",
      *     summary="Fetch the current user.",
      *     tags={"Users"},
+     *     security={{"bearerAuth": {}}},
      *     @OA\Response(
      *         response=200,
      *         description="Fetch Logged in user"
