# routes/api.php
@@ -1,7 +1,9 @@
 <?php
 
+use App\Actions\Fortify\CreateNewUser;
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\Auth\RegisteredUserController;
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\PostController;
 use App\Http\Controllers\TagController;
@@ -10,25 +12,14 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['middleware' => ['web']], function () {
-    // your routes here
-
-
     Route::prefix('/v1')->group(function () {
-        Route::post('/register', [RegisteredUserController::class, 'store'])
-            ->middleware('guest')
-            ->name('register');
 
+        Route::post("/register", [AuthController::class, 'register']);
+        Route::post("/login", [AuthController::class, 'login']);
 
-        Route::post('/login', [AuthenticatedSessionController::class, 'store'])
-            ->middleware('guest')
-            ->name('login');
-
-
-        // Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
-        //     return $request->user();
-        // });
 
         Route::middleware(['auth:sanctum'])->group(function () {
+            Route::post("/logout", [AuthController::class, 'logout']);
             Route::get('/user', [UserController::class, 'show']);
 
             // Tags Routes
